# SimpleLogger

./: CMakeLists.txt  LICENSE  README.md
cmake/: SimpleLoggerConfig.cmake.in
include/SimpleLogger/: simple_logger.hpp
